Fix the date picker width on mobile

--- a/funnel/static/sass/_lastuser.scss
+++ b/funnel/static/sass/_lastuser.scss
@@ -111,11 +111,11 @@
 
 .login {
   margin: 0;
-  margin-right: 8px;
   margin-bottom: $mui-grid-padding;
 }
 
 .login--smaller {
+  margin-right: $mui-grid-padding/2;
   margin-bottom: $mui-grid-padding/2;
 }
 
